<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.krows_team</groupId>
  <artifactId>sticker-bot</artifactId>
  <version>0.1.0</version>
  <name>Telegram Sticker Bot</name>
  <dependencies>
  	<dependency>
	  <groupId>com.github.pengrad</groupId>
	  <artifactId>java-telegram-bot-api</artifactId>
	  <version>6.0.1</version>
	</dependency>
	<dependency>
        <groupId>org.telegram</groupId>
        <artifactId>telegrambots</artifactId>
        <version>6.1.0</version>
    </dependency>
    <dependency>
	  <groupId>com.vdurmont</groupId>
	  <artifactId>emoji-java</artifactId>
	  <version>5.1.1</version>
	</dependency>
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-simple</artifactId>
	    <version>1.7.36</version>
	</dependency>
  </dependencies>
  <properties>
  	<jvm.options>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvm.options>
  </properties>
  <build>
  	<plugins>
  		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.8.0</version>
		    <configuration>
		    	<compilerArgs>
		    		<compilerArg>${jvm.options}</compilerArg>
		    	</compilerArgs>
	       		<source>1.8</source>
		        <target>1.8</target>
		        <verbose>true</verbose>
		    </configuration>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-dependency-plugin</artifactId>
		    <version>3.0.1</version>
		    <executions>
		        <execution>
		            <id>copy-dependencies</id>
		            <phase>package</phase>
		            <goals><goal>copy-dependencies</goal></goals>
		        </execution>
		    </executions>
		</plugin>
  	</plugins>
  </build>
</project>